# http-cache

./: .gitignore  Cargo.toml  README.md  config.toml
configs/: dev.toml  prod.toml  test.toml
crates/proxy/: Cargo.toml
crates/proxy/src/: cache.rs  headers.rs  lib.rs  main.rs  server.rs
crates/proxy/tests/: integration.rs
docs/roadmaps/: proxy-cache-roadmap.md
src/: cache.rs  config.rs  connect_tunnel.rs  errors.rs  headers.rs  http_proxy.rs  main.rs  obs.rs  policy.rs  server.rs
src/http_proxy/: cache_pipeline.rs  headers.rs  mod.rs  upstream.rs
tests/: cache_streaming.rs  integration.rs  startup_modes.rs
