[package]
name = "httpcache"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
