[package]
name = "httpcache"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"

[dependencies]
bytes = "1.11.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
chrono-tz = "0.10.4"
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0-rc.3"
thiserror = "2.0.17"
tokio = { version = "1.47.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
tokio = { version = "1.47.2", features = ["full"] }
tracing = "0.1.44"
