[package]
name = "proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio.workspace = true
tracing.workspace = true
